# agent-opt

./: CHANGELOG.md  CONTRIBUTING.md  Dataset (35).csv  Dataset (36).csv  NOTICE  README.md  SECURITY.md  demo-dataset.csv  example.env  main.py  opik-test-notebook.ipynb  pyproject.toml  test_optimizers.py
examples/: FutureAGI_Agent_Optimizer.ipynb
experiments/: opik-test-notebook.ipynb
src/: README.md  pyproject.toml
src/base/: Evaluator.py  Generator.py  Optimizer.py  Runner.py
src/fi/opt/: types.py
src/fi/opt/base/: base_optimizer.py  evaluator.py
src/fi/opt/optimizers/: bayesian_search.py  gepa.py  metaprompt.py  promptwizard.py  protegi.py  random_search.py
src/fi/opt/utils/: __init__.py  early_stopping.py
src/prompt_optimizer/: __init__.py  types.py
src/prompt_optimizer/base/: BaseOptimizer.py  Generator.py  Optimizer.py  Strategy.py  __init__.py  base_optimizer.py  dataclasses.py  evaluator.py  mapper.py  types.py
src/prompt_optimizer/generators/: __init__.py  litellm.py  litellm_generator.py
src/prompt_optimizer/optimizers/: __init__.py  bayesian_search.py  gepa.py  metaprompt.py  promptwizard.py  protegi.py  random_search.py
src/prompt_optimizer/strategies/: __init__.py  random_search.py
src/prompt_optimizer/utils/: setup_logging.py
tests/: test_bayesian_search_optimizer.py
