[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-optimizer"
version = "0.0.1"
authors = [
  { name="Future AGI", email="hello@futureagi.io" },
]
description = "A library for prompt optimization."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "litellm>=1.35.2",
    "ai-evaluation>=0.1.8",
    "python-dotenv>=1.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
